# gh-midi

./: .gitignore  .gitmodules  LICENSE.txt  README.md  meson.build
source/: args.cpp  args.hpp  main.cpp  meson.build  midi_manager.cpp  midi_manager.hpp  sdl_manager.cpp  sdl_manager.hpp
source/input/: drums_input_driver.cpp  drums_input_driver.hpp  guitar_input_driver.cpp  guitar_input_driver.hpp  input_driver.cpp  input_driver.hpp  input_manager.cpp  input_manager.hpp  input_source.hpp  meson.build
source/utils/: concepts.hpp  constexpr_hash.hpp  meson.build  print.hpp  read.cpp  read.hpp
